--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,12 @@
 @font-face {
-  font-family: "Shrikhand";
+  font-family: "Shrikhand Regular";
   src: url(../polices/Shrikhand-Regular.ttf);
   font-weight: 400;
+}
+@font-face {
+  font-family: "Shrikhand Bold";
+  src: url(../polices/Shrikhand-Regular.ttf);
+  font-weight: 700;
 }
 @font-face {
   font-family: "Roboto";
