file css in main branch

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 }
 @font-face {
-  font-family: "Shrikhand Bold";
-  src: url(../polices/Shrikhand-Regular.ttf);
+  font-family: "Roboto Bold";
+  src: url(../polices/Roboto-Bold.ttf);
   font-weight: 700;
 }
 @font-face {
