--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,45 +25,18 @@ body {
 }
 
 .main-header {
+  display: flex;
   width: 375px;
   height: 64px;
+  justify-content: center;
+  align-items: center;
   margin: auto;
-  background-color: #fff;
+  background-color: rgb(46, 7, 153);
 }
 
-.location {
-  width: 375px;
-  height: 50px;
-  margin: auto;
-  background-color: #eaeaea;
-}
-
-.book {
-  width: 375px;
-  height: 288px;
-  margin: auto;
-  background-color: #f7f7f7;
-}
-
-.working {
-  width: 375px;
-  height: 440px;
-  margin: auto;
-  background-color: #fff;
-}
-
-.restaurants {
-  width: 375px;
-  height: 1227px;
-  margin: auto;
-  background-color: #f7f7f7;
-}
-
-footer {
-  width: 375px;
-  height: 198px;
-  margin: auto;
-  background-color: rgb(42, 25, 194);
+.logo {
+  width: 175px;
+  height: 35px;
 }
 
 /*# sourceMappingURL=styles.css.map */
