--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -47,16 +47,26 @@ $color-tertiary: rgb(153, 226, 208);
 }
 
 .logo {
-	width: 175px;
-	height: 35px;
+	width: 165px;
+	height: 30px;
 }
 
-// .location {
-// 	width: 375px;
-// 	height: 50px;
-// 	margin: auto;
-// 	background-color: #eaeaea;
-// }
+.location {
+	display: flex;
+	width: 375px;
+	height: 50px;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	font-size: 1.3em;
+	color: #353535;
+	background-color: #eaeaea;
+}
+
+.location i {
+	margin-right: 8px;
+	font-size: 1.1em;
+}
 
 // .book {
 // 	width: 375px;
