--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,4 +56,21 @@ body {
   font-size: 1.1em;
 }
 
+.book {
+  display: flex;
+  width: 375px;
+  height: 288px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  background-color: #f7f7f7;
+}
+
+.book h1 {
+  width: 250px;
+  font-size: 2.2em;
+  text-align: center;
+}
+
 /*# sourceMappingURL=styles.css.map */
