--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -86,6 +86,24 @@ $color-tertiary: rgb(153, 226, 208);
 		font-size: 2.2em;
 		text-align: center;
 	}
+
+	p {
+		width: 300px;
+		margin-top: 10px;
+		font-size: 1.6em;
+		text-align: center;
+		color: #666666;
+	}
+
+	.explore {
+		margin-top: 25px;
+		padding: 17px;
+		border-radius: 50px;
+		font-size: 1.6em;
+		text-decoration: none;
+		color: #fff;
+		background-color: rgb(85, 13, 179);
+	}
 }
 
 
