change color of explore button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,7 @@ body {
   font-size: 1.6em;
   text-decoration: none;
   color: #fff;
-  background-color: rgb(85, 13, 179);
+  background-color: #b561dc;
 }
 
 /*# sourceMappingURL=styles.css.map */
