--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -102,7 +102,7 @@ $color-tertiary: rgb(153, 226, 208);
 		font-size: 1.6em;
 		text-decoration: none;
 		color: #fff;
-		background-color: rgb(85, 13, 179);
+		background-color: #b561dc;
 	}
 }
 
