--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,10 +119,15 @@ body {
   color: #7e7e7e;
 }
 .working .working-button .circle {
+  width: 20px;
+  height: 20px;
   position: absolute;
   left: -10px;
-  padding: 11px;
+  line-height: 20px;
+  text-align: center;
+  font-size: 0.7em;
   border-radius: 50%;
+  color: #fff;
   background-color: #9356dc;
 }
 .working .working-button:hover {
