Change padding of explore button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,7 +79,7 @@ body {
 }
 .book .explore {
   margin-top: 25px;
-  padding: 17px;
+  padding: 13px 20px;
   border-radius: 50px;
   font-size: 1.6em;
   text-decoration: none;
