--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -97,7 +97,7 @@ $color-tertiary: rgb(153, 226, 208);
 
 	.explore {
 		margin-top: 25px;
-		padding: 17px;
+		padding: 13px 20px;
 		border-radius: 50px;
 		font-size: 1.6em;
 		text-decoration: none;
