--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -165,12 +165,89 @@ $color-tertiary: rgb(153, 226, 208);
 	}
 }
 
-// .restaurants {
-// 	width: 375px;
-// 	height: 1227px;
-// 	margin: auto;
-// 	background-color: #f7f7f7;
-// }
+.restaurants {
+	display: flex;
+	width: 375px;
+	height: 1200px;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+	gap: 25px;
+	margin: auto;
+	background-color: #f7f7f7;
+
+	h2 {
+		display: flex;
+		font-size: 1.8em;
+		align-self: flex-start;
+	}
+}
+
+.card-restaurant {
+	width: 336px;
+	height: 240px;
+	border-radius: 15px;
+	box-shadow: 1px 1px 10px rgb(215 215 215);
+	// background-color: rgb(57, 12, 129);
+
+	.img-container {
+		position: relative;
+		width: 100%;
+		height: 170px;
+		border-radius: 15px 15px 0 0;
+		// background-color: rgb(131, 32, 223);
+
+		.img-card {
+			width: 100%;
+			height: 170px;
+			border-radius: 15px 15px 0 0;
+			object-fit: cover;
+		}
+
+		.label-new {
+			position: absolute;
+			width: 80px;
+			height: 30px;
+			right: 10px;
+			top: 10px;
+			text-align: center;
+			line-height: 30px;
+			font-size: 1.3em;
+			color: #008766;
+			background-color: #99e2d0;
+		}
+	}
+
+	.text-container {
+		display: flex;
+		width: 100%;
+		height: 70px;
+		justify-content: space-between;
+		align-items: center;
+		border-radius: 0 0 15px 15px;
+		background-color: #fff;
+		// background-color: rgb(35, 21, 167);
+
+		.text {
+			margin-left: 15px;
+		}
+
+		h3 {
+			font-size: 1.5em;
+		}
+		
+		p {
+			font-size: 1.4em;
+		}
+
+		.heart {
+			font-size: 2em;
+			margin-right: 25px;
+		}
+	}
+}
 
 // footer {
 // 	width: 375px;
