--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,6 +155,10 @@ body {
   font-size: 1.8em;
   align-self: flex-start;
 }
+.restaurants a {
+  text-decoration: none;
+  color: #000;
+}
 
 .card-restaurant {
   width: 336px;
