--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -183,6 +183,11 @@ $color-tertiary: rgb(153, 226, 208);
 		font-size: 1.8em;
 		align-self: flex-start;
 	}
+
+	a {
+		text-decoration: none;
+		color: #000;
+	}
 }
 
 .card-restaurant {
