--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,4 +213,35 @@ body {
   margin-right: 25px;
 }
 
+.footer {
+  display: flex;
+  width: 375px;
+  height: 198px;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  padding-left: 25px;
+  background-color: #353535;
+}
+.footer .logo-footer {
+  width: 100px;
+  height: 20px;
+  margin-bottom: 10px;
+}
+.footer ul {
+  list-style: none;
+}
+.footer ul li {
+  margin-top: 10px;
+}
+.footer ul li i {
+  width: 10px;
+  margin-right: 15px;
+}
+.footer a {
+  text-decoration: none;
+  font-size: 1.4em;
+  color: #fff;
+}
+
 /*# sourceMappingURL=styles.css.map */
