--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -33,6 +33,10 @@ $color-primary: rgb(147, 86, 220);
 $color-secondary: rgb(255, 121, 218);
 $color-tertiary: rgb(153, 226, 208);
 
+$background-primary: #fff;
+$background-secondary: #f7f7f7;
+
+
 
 .main-header {
 	// min-width: 375px;
@@ -79,7 +83,7 @@ $color-tertiary: rgb(153, 226, 208);
 	justify-content: center;
 	align-items: center;
 	margin: auto;
-	background-color: #f7f7f7;
+	background-color: $background-secondary;
 
 	h1 {
 		width: 250px;
@@ -114,6 +118,8 @@ $color-tertiary: rgb(153, 226, 208);
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	align-content: center;
+	flex-wrap: wrap;
 	margin: auto;
 	// background-color: #5137e4;
 	background-color: #fff;
@@ -121,7 +127,6 @@ $color-tertiary: rgb(153, 226, 208);
 	h2 {
 		font-size: 1.8em;
 		align-self: flex-start;
-		margin-left: 15px;
 	}
 
 	.working-button {
@@ -133,7 +138,7 @@ $color-tertiary: rgb(153, 226, 208);
 		text-decoration: none;
 		font-size: 1.6em;
 		color: #000;
-		background-color: #f7f7f7;
+		background-color: $background-secondary;
 		// background-color: rgb(69, 30, 177);
 
 		i {
@@ -176,7 +181,7 @@ $color-tertiary: rgb(153, 226, 208);
 	flex-wrap: wrap;
 	gap: 25px;
 	margin: auto;
-	background-color: #f7f7f7;
+	background-color: $background-secondary;
 
 	h2 {
 		display: flex;
@@ -254,9 +259,38 @@ $color-tertiary: rgb(153, 226, 208);
 	}
 }
 
-// footer {
-// 	width: 375px;
-// 	height: 198px;
-// 	margin: auto;
-// 	background-color: rgb(42, 25, 194);
-// }
+.footer {
+	display: flex;
+	width: 375px;
+	height: 198px;
+	flex-direction: column;
+	justify-content: center;
+	margin: auto;
+	padding-left: 25px;
+	background-color: #353535;
+
+	.logo-footer {
+		width: 100px;
+		height: 20px;
+		margin-bottom: 10px;
+	}
+
+	ul {
+		list-style: none;
+
+		li {
+			margin-top: 10px;
+
+			i {
+				width: 10px;
+				margin-right: 15px;
+			}
+		}
+	}
+
+	a {
+		text-decoration: none;
+		font-size: 1.4em;
+		color: #fff;
+	}
+}
