--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,9 +25,9 @@ body {
 }
 
 .main-header {
-  display: flex;
   width: 375px;
   height: 64px;
+  display: flex;
   justify-content: center;
   align-items: center;
   margin: auto;
@@ -40,9 +40,9 @@ body {
 }
 
 .location {
-  display: flex;
   width: 375px;
   height: 50px;
+  display: flex;
   justify-content: center;
   align-items: center;
   margin: auto;
@@ -56,12 +56,12 @@ body {
 }
 
 .book {
-  display: flex;
   width: 375px;
   height: 288px;
-  flex-direction: column;
+  display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: auto;
   background-color: #f7f7f7;
 }
@@ -84,23 +84,24 @@ body {
   font-size: 1.6em;
   text-decoration: none;
   color: #fff;
-  background-color: #b561dc;
+  background: linear-gradient(rgb(147, 86, 220), rgb(255, 121, 218));
 }
 
 .working {
-  display: flex;
   width: 375px;
   height: 352px;
-  flex-direction: column;
+  display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
   margin: auto;
   background-color: #fff;
 }
 .working h2 {
   font-size: 1.8em;
   align-self: flex-start;
-  margin-left: 15px;
 }
 .working .working-button {
   position: relative;
@@ -138,14 +139,14 @@ body {
 }
 
 .restaurants {
-  display: flex;
   width: 375px;
   height: 1200px;
-  flex-direction: column;
-  align-items: center;
+  display: flex;
   justify-content: center;
+  align-items: center;
   align-content: center;
   flex-wrap: wrap;
+  flex-direction: column;
   gap: 25px;
   margin: auto;
   background-color: #f7f7f7;
@@ -191,9 +192,9 @@ body {
   background-color: #99e2d0;
 }
 .card-restaurant .text-container {
-  display: flex;
   width: 100%;
   height: 70px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 0 0 15px 15px;
