--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,6 +17,7 @@
 }
 
 
+
 *, ::before, ::after {
 	margin: 0;
 	padding: 0;
@@ -38,6 +39,7 @@ $background-primary: rgb(255, 255, 255);
 $background-secondary: rgb(247, 247, 247);
 
 
+
 @mixin flexCenter($justifyContent, $alignItems) {
 	display: flex;
 	justify-content: $justifyContent;
@@ -56,14 +58,34 @@ $background-secondary: rgb(247, 247, 247);
 	width: 375px;
 	height: 64px;
 	@include flexCenter(center, center);
+	position: relative;
 	margin: auto;
-	// background-color: rgb(46, 7, 153);
-	background-color: $background-primary;
+	background-color: rgb(46, 7, 153);
+	// background-color: $background-primary;
+}
+
+.return-button {
+	width: 50%;
+	height: 64px;
+	// background-color: #9356dc;
+
+	a {
+		line-height: 64px;
+		margin-left: 25px;
+		font-size: 3em;
+		color: $color-fourthy;
+	}
 }
 
 .logo {
-	width: 165px;
+	max-width: 165px;
 	height: 30px;
+	flex-grow: 1;
+}
+
+.header-right {
+	width: 50%;
+	height: 64px;
 }
 
 
@@ -73,6 +95,7 @@ $background-secondary: rgb(247, 247, 247);
 	height: 50px;
 	@include flexCenter(center, center);
 	margin: auto;
+	box-shadow: 0px 2px 6px #bcbcbc inset;
 	font-size: 1.3em;
 	color: $color-fourthy;
 	background-color: rgb(234, 234, 234);
@@ -82,6 +105,7 @@ $background-secondary: rgb(247, 247, 247);
 		font-size: 1.1em;
 	}
 }
+
 
 
 .book {
@@ -116,6 +140,7 @@ $background-secondary: rgb(247, 247, 247);
 		background: linear-gradient($color-primary, $color-secondary);
 	}
 }
+
 
 
 .working {
@@ -173,6 +198,8 @@ $background-secondary: rgb(247, 247, 247);
 		}
 	}
 }
+
+
 
 .restaurants {
 	width: 375px;
@@ -259,10 +286,12 @@ $background-secondary: rgb(247, 247, 247);
 	}
 }
 
+
+
 .footer {
-	display: flex;
 	width: 375px;
 	height: 198px;
+	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	margin: auto;
@@ -294,3 +323,32 @@ $background-secondary: rgb(247, 247, 247);
 		color: rgb(255, 255, 255);
 	}
 }
+
+
+
+// Section menu
+.img-section {
+	width: 375px;
+	height: 300px;
+	position: relative;
+	z-index: -1;
+	margin: auto;
+	background-color: rgb(38, 22, 175);
+}
+
+.img-cover {
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+}
+
+
+
+.menu-section {
+	width: 375px;
+	height: 1100px;
+	margin: -60px auto;
+	border-radius: 60px 60px 0 0;
+	background-color: $background-secondary;
+}
+
