--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,6 @@ body {
   align-items: center;
   position: relative;
   margin: auto;
-  background-color: rgb(46, 7, 153);
 }
 
 .return-button {
@@ -42,7 +41,7 @@ body {
 .return-button a {
   line-height: 64px;
   margin-left: 25px;
-  font-size: 3em;
+  font-size: 2.5em;
   color: rgb(53, 53, 53);
 }
 
@@ -281,9 +280,93 @@ body {
 .menu-section {
   width: 375px;
   height: 1100px;
-  margin: -60px auto;
-  border-radius: 60px 60px 0 0;
+  display: flex;
+  align-content: space-evenly;
+  flex-wrap: wrap;
+  margin: -60px auto 0;
+  border-radius: 44px 44px 0 0;
   background-color: rgb(247, 247, 247);
+}
+.menu-section .title-menu {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-right: 45px;
+  align-items: center;
+}
+.menu-section .title-menu .title {
+  font-size: 2.5em;
+}
+.menu-section .title-menu .title-heart {
+  font-size: 2.5em;
+}
+
+.menu {
+  width: 350px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin: auto;
+}
+.menu h2 {
+  width: 50px;
+  padding-bottom: 5px;
+  border-bottom: 4px solid rgb(153, 226, 208);
+  text-transform: uppercase;
+  font-size: 2em;
+}
+.menu .menu-item {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  box-shadow: 0px 0px 15px #c7c7c7;
+  cursor: pointer;
+  border-radius: 15px;
+}
+.menu .menu-item .item-text {
+  width: 85%;
+  height: 70px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  padding-left: 10px;
+}
+.menu .menu-item .item-text h3 {
+  width: 100%;
+  font-size: 1.8em;
+}
+.menu .menu-item .item-text p {
+  font-size: 1.6em;
+}
+.menu .menu-item .item-price {
+  width: 15%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 15px;
+  font-size: 1.6em;
+}
+.menu .menu-item .item-select {
+  width: 20%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  border-radius: 0 15px 15px 0;
+  font-size: 2em;
+  color: #fff;
+  background-color: rgb(153, 226, 208);
+}
+.menu .menu-item:hover .item-select {
+  display: flex;
+}
+.menu .menu-item:hover .item-text p {
+  text-overflow: ellipsis;
 }
 
 /*# sourceMappingURL=styles.css.map */
