--- a/styles/styles.css
+++ b/styles/styles.css
@@ -369,4 +369,20 @@ body {
   text-overflow: ellipsis;
 }
 
+.buy-link {
+  margin: 40px auto;
+  text-decoration: none;
+}
+
+.button-buy {
+  width: 185px;
+  height: 50px;
+  border-radius: 50px;
+  font-size: 1.6em;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  background-color: #ae5fdb;
+}
+
 /*# sourceMappingURL=styles.css.map */
