--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -453,3 +453,19 @@ $background-secondary: rgb(247, 247, 247);
 		}
 	}
 }
+
+.buy-link {
+	margin: 40px auto;
+	text-decoration: none;
+}
+
+.button-buy {
+	width: 185px;
+	height: 50px;
+	border-radius: 50px;
+	font-size: 1.6em;
+	text-align: center;
+	line-height: 50px;
+	color: #fff;
+	background-color: #ae5fdb;
+}
