--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,11 @@
   font-weight: 700;
 }
 @font-face {
+  font-family: "Roboto Light";
+  src: url(../polices/Roboto-Light.ttf);
+  font-weight: 700;
+}
+@font-face {
   font-family: "Roboto";
   src: url(../polices/Roboto-Regular.ttf);
   font-weight: 400;
@@ -32,6 +37,7 @@ body {
   align-items: center;
   position: relative;
   margin: auto;
+  background-color: rgb(255, 255, 255);
 }
 
 .return-button {
@@ -279,7 +285,7 @@ body {
 
 .menu-section {
   width: 375px;
-  height: 1100px;
+  height: auto;
   display: flex;
   align-content: space-evenly;
   flex-wrap: wrap;
@@ -291,12 +297,12 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-left: 15px;
-  margin-right: 45px;
   align-items: center;
+  margin: 30px 45px 0 15px;
 }
 .menu-section .title-menu .title {
   font-size: 2.5em;
+  font-family: "Shrikhand Regular";
 }
 .menu-section .title-menu .title-heart {
   font-size: 2.5em;
@@ -309,12 +315,13 @@ body {
   align-items: center;
   flex-wrap: wrap;
   gap: 15px;
-  margin: auto;
+  margin: 30px auto 10px;
 }
 .menu h2 {
   width: 50px;
   padding-bottom: 5px;
   border-bottom: 4px solid rgb(153, 226, 208);
+  font-family: "Roboto Light";
   text-transform: uppercase;
   font-size: 2em;
 }
@@ -323,8 +330,8 @@ body {
   height: 70px;
   display: flex;
   box-shadow: 0px 0px 15px #c7c7c7;
-  cursor: pointer;
   border-radius: 15px;
+  cursor: pointer;
 }
 .menu .menu-item .item-text {
   width: 85%;
@@ -336,6 +343,7 @@ body {
 }
 .menu .menu-item .item-text h3 {
   width: 100%;
+  margin-bottom: 5px;
   font-size: 1.8em;
 }
 .menu .menu-item .item-text p {
@@ -349,14 +357,15 @@ body {
   align-items: flex-end;
   padding-bottom: 15px;
   font-size: 1.6em;
+  font-weight: bold;
+  color: rgb(53, 53, 53);
 }
 .menu .menu-item .item-select {
   width: 20%;
   height: 70px;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  display: none;
   border-radius: 0 15px 15px 0;
   font-size: 2em;
   color: #fff;
@@ -370,7 +379,7 @@ body {
 }
 
 .buy-link {
-  margin: 40px auto;
+  margin: 30px auto 40px;
   text-decoration: none;
 }
 
@@ -382,7 +391,8 @@ body {
   text-align: center;
   line-height: 50px;
   color: #fff;
-  background-color: #ae5fdb;
+  box-shadow: 0 0 15px rgb(200, 195, 195);
+  background: linear-gradient(rgb(147, 86, 220), rgb(255, 121, 218));
 }
 
 /*# sourceMappingURL=styles.css.map */
