--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,6 +11,12 @@
 }
 
 @font-face {
+	font-family: 'Roboto Light';
+	src: url(../polices/Roboto-Light.ttf);
+	font-weight: 700;
+}
+
+@font-face {
 	font-family: 'Roboto';
 	src: url(../polices/Roboto-Regular.ttf);
 	font-weight: 400;
@@ -61,7 +67,7 @@ $background-secondary: rgb(247, 247, 247);
 	position: relative;
 	margin: auto;
 	// background-color: rgb(46, 7, 153);
-	// background-color: $background-primary;
+	background-color: $background-primary;
 }
 
 .return-button {
@@ -326,7 +332,7 @@ $background-secondary: rgb(247, 247, 247);
 
 
 
-// Section menu
+
 .img-section {
 	width: 375px;
 	height: 300px;
@@ -343,10 +349,9 @@ $background-secondary: rgb(247, 247, 247);
 }
 
 
-
 .menu-section {
 	width: 375px;
-	height: 1100px;
+	height: auto;
 	display: flex;
 	align-content: space-evenly;
 	flex-wrap: wrap;
@@ -357,14 +362,12 @@ $background-secondary: rgb(247, 247, 247);
 	.title-menu {
 		width: 100%;
 		// height: 64px;
-		display: flex;
-		justify-content: space-between;
-		margin-left: 15px;
-		margin-right: 45px;
-		align-items: center;
+		@include flexCenter(space-between, center);
+		margin: 30px 45px 0 15px;
 	
 		.title {
 			font-size: 2.5em;
+			font-family: 'Shrikhand Regular';
 		}
 	
 		.title-heart {
@@ -377,18 +380,17 @@ $background-secondary: rgb(247, 247, 247);
 	width: 350px;
 	height: auto;
 	display: flex;
-	// justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
 	gap: 15px;
-	margin: auto;
+	margin: 30px auto 10px;
 	// background-color: #280c8b;
 
 	h2 {
 		width: 50px;
-		// align-self: flex-start;
 		padding-bottom: 5px;
 		border-bottom: 4px solid $color-tertiary;
+		font-family: 'Roboto Light';
 		text-transform: uppercase;
 		font-size: 2em;
 	}
@@ -398,8 +400,8 @@ $background-secondary: rgb(247, 247, 247);
 		height: 70px;
 		display: flex;
 		box-shadow: 0px 0px 15px #c7c7c7;
-		cursor: pointer;
 		border-radius: 15px;
+		cursor: pointer;
 		// background-color: #734cff;
 
 		.item-text {
@@ -414,6 +416,7 @@ $background-secondary: rgb(247, 247, 247);
 
 			h3 {
 				width: 100%;
+				margin-bottom: 5px;
 				font-size: 1.8em;
 			}
 
@@ -430,14 +433,17 @@ $background-secondary: rgb(247, 247, 247);
 			align-items: flex-end;
 			padding-bottom: 15px;
 			font-size: 1.6em;
+			font-weight: bold;
+			color: $color-fourthy;
 			// background-color: rgb(32, 9, 161);
 		}
 
 		.item-select {
 			width: 20%;
 			height: 70px;
-			@include flexCenter(center, center);
 			display: none;
+			justify-content: center;
+			align-items: center;
 			border-radius: 0 15px 15px 0;
 			font-size: 2em;
 			color: #fff;
@@ -454,8 +460,9 @@ $background-secondary: rgb(247, 247, 247);
 	}
 }
 
+
 .buy-link {
-	margin: 40px auto;
+	margin: 30px auto 40px;
 	text-decoration: none;
 }
 
@@ -467,5 +474,6 @@ $background-secondary: rgb(247, 247, 247);
 	text-align: center;
 	line-height: 50px;
 	color: #fff;
-	background-color: #ae5fdb;
+	box-shadow: 0 0 15px rgb(200 195 195);
+	background: linear-gradient($color-primary, $color-secondary);
 }
