--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,3 +5,5 @@
 @import './pages/_index';
 @import './pages/_menu';
 @import './layouts/_footer';
+@import './utils/_animations';
+@import './utils/_responsive';
