--- a/styles/pages/_menu.scss
+++ b/styles/pages/_menu.scss
@@ -107,11 +107,13 @@
 		}
 
 		.item-select {
-			width: 20%;
+			width: 0%;
 			height: 70px;
-			display: none;
+			display: flex;
+			overflow: hidden;
 			justify-content: center;
 			align-items: center;
+			transition: width .3s ease-in;
 			border-radius: 0 15px 15px 0;
 			font-size: 2em;
 			color: #fff;
@@ -119,7 +121,11 @@
 		}
 
 		&:hover .item-select {
-			display: flex;
+			width: 20%;
+		}
+
+		&:hover .item-select i {
+			animation: rotateSelect .8s forwards;
 		}
 
 		&:hover .item-text p {
