--- a/styles/styles.css
+++ b/styles/styles.css
@@ -335,18 +335,23 @@ body {
   color: rgb(53, 53, 53);
 }
 .menu .menu-item .item-select {
-  width: 20%;
+  width: 0%;
   height: 70px;
-  display: none;
+  display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
+  transition: width 0.3s ease-in;
   border-radius: 0 15px 15px 0;
   font-size: 2em;
   color: #fff;
   background-color: rgb(153, 226, 208);
 }
 .menu .menu-item:hover .item-select {
-  display: flex;
+  width: 20%;
+}
+.menu .menu-item:hover .item-select i {
+  animation: rotateSelect 0.8s forwards;
 }
 .menu .menu-item:hover .item-text p {
   text-overflow: ellipsis;
@@ -420,6 +425,14 @@ body {
   100% {
     opacity: 100%;
     transform: translateY(0);
+  }
+}
+@keyframes rotateSelect {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
