--- a/styles/utils/_animations.scss
+++ b/styles/utils/_animations.scss
@@ -9,3 +9,13 @@
 		transform: translateY(0);
 	}
 }
+
+@keyframes rotateSelect {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
