Creation pages of menus

--- a/styles/pages/_menu.scss
+++ b/styles/pages/_menu.scss
@@ -147,6 +147,9 @@
 	.menu-item:nth-child(4) {
 		animation: showMenuAnimation 1s 1.2s forwards;
 	}
+	.menu-item:nth-child(5) {
+		animation: showMenuAnimation 1s 1.2s forwards;
+	}
 
 }
 
