--- a/styles/styles.css
+++ b/styles/styles.css
@@ -368,6 +368,9 @@ body {
 .menu .menu-item:nth-child(4) {
   animation: showMenuAnimation 1s 1.2s forwards;
 }
+.menu .menu-item:nth-child(5) {
+  animation: showMenuAnimation 1s 1.2s forwards;
+}
 
 .buy-link {
   margin: 30px auto 40px;
