--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -3,5 +3,8 @@ $color-secondary: rgb(255, 121, 218);
 $color-tertiary: rgb(153, 226, 208);
 $color-fourthy: rgb(53, 53, 53);
 
+$color-primary-light: rgb(163, 112, 226);
+$color-secondary-light: rgb(245, 143, 216);
+
 $background-primary: rgb(255, 255, 255);
 $background-secondary: rgb(247, 247, 247);
