--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,3 +1,66 @@
+.loader {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	animation: loader 0s linear 3s forwards;
+	z-index: 1;
+	background-color: #9356dc;
+}
+
+.loader-spinner {
+	position: relative;
+	width: 120px;
+	height: 14px;
+	border-radius: 0 0 15px 15px;
+	background-color: #3e494d;
+	box-shadow: 0 -1px 4px #5d6063 inset;
+	animation: panAnimation 0.5s linear alternate infinite;
+	transform-origin: 170px 0;
+	z-index: 10;
+	perspective: 300px;
+
+	&::before {
+		content: '';
+		position: absolute;
+		left: calc( 100% - 2px);
+		top: 0;
+		z-index: -2;
+		height: 10px;
+		width: 70px;
+		border-radius: 0 4px 4px 0;
+		background-repeat: no-repeat;
+		background-image: linear-gradient(#6c4924, #4b2d21), linear-gradient(#4d5457 24px, transparent 0), linear-gradient(#9f9e9e 24px, transparent 0);
+		background-size: 50px 10px , 4px 8px , 24px 4px;
+		background-position: right center , 17px center , 0px center;
+	}
+
+	&::after {
+		content: '';
+		position: absolute;
+		left: 50%;
+		top: 0;
+		z-index: -2;
+		transform: translate(-50% , -20px) rotate3d(75, -2, 3, 78deg);
+		width: 55px;
+		height: 53px;
+		background: #fff;
+		background-image:
+		radial-gradient(circle 3px , #fff6 90%, transparent 10%),
+		radial-gradient(circle 12px , #ffc400 90%, transparent 10%),
+		radial-gradient(circle 12px , #ffae00 100%, transparent 0);
+		background-repeat: no-repeat;
+		background-position: -4px -6px , -2px -2px , -1px -1px;
+		box-shadow: -2px -3px #0002 inset, 0 0 4px #0003 inset;
+		border-radius: 47% 36% 50% 50% / 49% 45% 42% 44%;
+		animation: eggsAnimation 1s ease-out infinite;
+	}
+}
+
+
+
 .location {
 	width: 375px;
 	height: 50px;
@@ -47,6 +110,10 @@
 	text-decoration: none;
 	color: rgb(255, 255, 255);
 	background: linear-gradient($color-primary, $color-secondary);
+
+	&:hover {
+		background: linear-gradient($color-primary-light, $color-secondary-light);
+	}
 }
 
 
@@ -62,7 +129,7 @@
 	background-color: rgb(255, 255, 255);
 
 	h2 {
-		font-size: 1.8em;
+		font-size: 2.2em;
 		align-self: flex-start;
 	}
 }
@@ -120,7 +187,7 @@
 	background-color: $background-secondary;
 
 	h2 {
-		font-size: 1.8em;
+		font-size: 2.2em;
 		align-self: flex-start;
 	}
 
@@ -180,16 +247,22 @@
 		}
 
 		h3 {
-			font-size: 1.5em;
+			font-size: 1.8em;
 		}
 		
 		p {
-			font-size: 1.4em;
+			font-size: 1.6em;
 		}
 
 		.heart {
-			font-size: 2em;
+			font-size: 2.2em;
 			margin-right: 25px;
+
+			&:hover i {
+				color: $color-primary;
+				font-weight: 700;
+				cursor: pointer;
+			}
 		}
 	}
 }
