--- a/styles/pages/_menu.scss
+++ b/styles/pages/_menu.scss
@@ -18,6 +18,7 @@
 	width: 375px;
 	height: auto;
 	display: flex;
+	flex-direction: column;
 	align-content: space-evenly;
 	flex-wrap: wrap;
 	margin: -60px auto 0;
@@ -25,10 +26,8 @@
 	background-color: $background-secondary;
 
 	.title-menu {
-		width: 100%;
-		// height: 64px;
 		@include flexCenter(space-between, center);
-		margin: 30px 45px 0 15px;
+		margin: 30px 34px 0 0px;
 	
 		.title {
 			font-size: 2.5em;
@@ -37,6 +36,12 @@
 	
 		.title-heart {
 			font-size: 2.5em;
+
+			&:hover i {
+				color: $color-primary;
+				font-weight: 700;
+				cursor: pointer;
+			}
 		}
 	}
 }
@@ -79,16 +84,22 @@
 			flex-wrap: wrap;
 			align-content: center;
 			padding-left: 10px;
-			// word-wrap: break-word;
+			overflow: hidden;
 			// background-color: rgb(33, 30, 206);
 
 			h3 {
 				width: 100%;
 				margin-bottom: 5px;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 				font-size: 1.8em;
 			}
 
 			p {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 				font-size: 1.6em;
 			}
 		}
@@ -170,4 +181,8 @@
 	color: #fff;
 	box-shadow: 0 0 15px rgb(200 195 195);
 	background: linear-gradient($color-primary, $color-secondary);
+
+	&:hover {
+		background: linear-gradient($color-primary-light, $color-secondary-light);
+	}
 }
