--- a/styles/utils/_animations.scss
+++ b/styles/utils/_animations.scss
@@ -19,3 +19,26 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes loader {
+	0% {
+		opacity: 100%;
+	}
+
+	100% {
+		opacity: 0%;
+		z-index: -1;
+	}
+}
+
+@keyframes eggsAnimation {
+	0% ,  100%{  transform: translate(-50%, -20px) rotate3d(90, 0, 0, 90deg); opacity: 0; }
+	10% , 90% {  transform: translate(-50%, -30px) rotate3d(90, 0, 0, 90deg); opacity: 1; }
+	25%  {transform:  translate(-50% , -40px) rotate3d(85, 17, 2, 70deg) }
+	75% {transform:  translate(-50% , -40px) rotate3d(75, -3, 2, 70deg) }
+	50% {transform:  translate(-55% , -50px) rotate3d(75, -8, 3, 50deg) }
+}
+@keyframes panAnimation {
+	0%{  transform: rotate(-5deg)  }
+	100%{  transform: rotate(10deg)  }
+}
