--- a/styles/pages/_menu.scss
+++ b/styles/pages/_menu.scss
@@ -1,5 +1,6 @@
 .img-section {
-	width: 375px;
+	min-width: 375px;
+	max-width: 1400px;
 	height: 300px;
 	position: relative;
 	z-index: -1;
@@ -15,7 +16,8 @@
 
 
 .menu-section {
-	width: 375px;
+	min-width: 375px;
+	max-width: 1400px;
 	height: auto;
 	display: flex;
 	flex-direction: column;
@@ -27,7 +29,7 @@
 
 	.title-menu {
 		@include flexCenter(space-between, center);
-		margin: 30px 34px 0 0px;
+		margin: 30px 40px 0 25px;
 	
 		.title {
 			font-size: 2.5em;
@@ -47,13 +49,14 @@
 }
 
 .menu {
-	width: 350px;
+	// width: 350px;
+	min-width: 350px;
 	height: auto;
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
 	gap: 15px;
-	margin: 30px auto 10px;
+	margin: 30px 25px 10px;
 	// background-color: #280c8b;
 
 	h2 {
