--- a/styles/pages/_menu.scss
+++ b/styles/pages/_menu.scss
@@ -37,12 +37,33 @@
 		}
 	
 		.title-heart {
+			position: relative;
 			font-size: 2.5em;
+			
+			i {
+				transition: transform .3s ease-in;
+			}
 
 			&:hover i {
-				color: $color-primary;
-				font-weight: 700;
 				cursor: pointer;
+			}
+
+			i:nth-child(2) {
+				position: absolute;
+				left: 0;
+				color: $color-primary;
+				transform: scale(0);
+			}
+
+			&:hover i:nth-child(1) {
+				transform: scale(0);
+			}
+
+			&:hover i:nth-child(2) {
+				// display: block;
+				// opacity: 1;
+				transform: scale(1);
+				color: $color-primary;
 			}
 		}
 	}
